# wmcoincoin

./: .gitignore  AUTHORS  ChangeLog  MACOSX  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac  genoptlst.sh  options  wmccc.glade  wmcoincoin.spec
m4/: ChangeLog  Makefile.am  Makefile.in  intl.m4
platypus/: Makefile.am  Makefile.in  gif.h  giffunc.c  gifread.c  wmcoincoin_player.c
po/: ChangeLog  Makevars  POTFILES.in  fr.gmo  fr.po  wmcoincoin.pot
scripts/: Makefile.am  Makefile.in  wmcoincoin-search-cookies  wmcoincoin-totoz-get  wmpanpan
src/: Makefile.am  Makefile.in  balloon.c  balltrap.c  balltrap.h  base64.c  base64.h  board.c  board_pop3.c  board_priv.h  board_rss.c  board_util.c  board_util.h  cc_queue.c  coin_util.c  coin_util.h  coin_xutil.c  coin_xutil.h  coincoin.h  dock.c  dock.h  fake-getaddrinfo.c  fake-getaddrinfo.h  fake-getnameinfo.c  fake-getnameinfo.h  fontcoincoin.c  fontcoincoin.h  general.h  global.h  http.c  http.h  http_unix.c  http_win.c  inet_aton.c  inet_aton.h  kbcoincoin.c  kbcoincoin.h  keylist.c  keylist.h  md5.c  (+43 more)
xpms/: badnews.xpm  bracket.xpm  clippy.xpm  clock.xpm  coin.xpm  date.xpm  duck.xcf  duck.xpm  editwin_minib.xcf  editwin_minib.xpm  icon.xpm  led.xpm  leds.h  leds.xcf  logo.xpm  miniduck.xpm  mkduck.sh  porte.h  porte.xcf  totoz.xpm
